--- a/styles/style.css
+++ b/styles/style.css
@@ -50,13 +50,27 @@ table {
     src: local(''),url('../font/Norse-Bold.otf');
   }
 
+@font-face {
+    font-family: Araboto;
+    src: local(''),url(../font/Araboto-Medium-400.otf);
+}
+
+@font-face {
+    font-family: AraL;
+    src: local(''),url(../font/Araboto-Light-400.otf);
+}
+
+  :root{
+    --background-color:#f9fafb;
+    --background-color-two: #ffffff;
+  }
 /* ///////////////// */
 body{
     display: flex;
     box-sizing: border-box;
     height: 100vh;
     /* overflow: hidden; */
-    font-family: 'Roboto',sans-serif;
+    font-family: Araboto;
 }
 
 .container .container-1{
@@ -98,7 +112,7 @@ body{
 }
 
 .right-1{
-    background-color: rgb(247, 247, 247);
+    background-color: var(--background-color);
     flex:2;
     display: flex;
     flex-direction: column;
@@ -117,14 +131,56 @@ body{
 }
 
 .right-2{
-    background-color: rgb(223, 223, 223);
+    background-color: var(--background-color-two);
     height:10vh;
-    flex:3;
+    flex:2;
     display: flex;
+    filter: drop-shadow(0 5px 5px rgba(0, 0, 0, 0.2));
     padding: 2% 4%;
 }
 .right-3{
-    background-color: rgb(247, 247, 247);
+    background-color: var(--background-color);
     height: 10vh;
     flex:2;
+}
+
+/* //////////////////////////////// */
+
+form {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    width:28vw;
+}
+
+form > div {
+    display: flex;
+    justify-content: space-between;
+}
+
+
+.upper, .lower{
+    display: flex;
+    justify-content: start;
+    flex-direction: column;
+    gap:0.4rem;
+}
+
+label {
+    font-family: AraL;
+    font-size: 1rem;
+    color: #66686b;
+    font-weight: 300;
+}
+
+legend{
+    color:#32373d;
+    font-weight: 700;
+    font-size: 1.8rem;
+}
+
+input{
+    width:13vw;
+    height:2.5vh;
+    border-radius: 3px;
 }
