--- a/styles/style.css
+++ b/styles/style.css
@@ -214,11 +214,16 @@ input[type="password"]:invalid{
 
 #createacnt{
     padding:1.4%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     width:11vw;
     background-color: #596d48;
     color: white;
     font-size: 1.3rem;
+    white-space: nowrap;
     border-radius: 0.6rem;
+    font-weight: 500;
     border:transparent;
     filter: drop-shadow(0 5px 5px rgba(0, 0, 0, 0.2));
 }
