--- a/styles/style.css
+++ b/styles/style.css
@@ -166,6 +166,7 @@ label {
     font-family: AraL;
     font-size: 0.9rem;
     color: #66686b;
+    white-space: nowrap;
     font-weight: 600;
 }
 
@@ -213,20 +214,23 @@ input[type="password"]:invalid{
 }
 
 #createacnt{
-    padding:1.4%;
+    padding:2vh 2vw;
     display: flex;
     justify-content: center;
     align-items: center;
-    width:11vw;
+    width:10vw;
     background-color: #596d48;
     color: white;
-    font-size: 1.3rem;
+    font-size: 1.3vw;
+    min-width: 20%;
+    min-height: 8vh;
     white-space: nowrap;
     border-radius: 0.6rem;
     font-weight: 500;
     border:transparent;
     transition: all 0.2s;
     filter: drop-shadow(0 5px 5px rgba(0, 0, 0, 0.2));
+    flex-shrink: 0;
 }
 
 #alreadyuser{
